XMLExper/m12/m12_329_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘const tinyxml2::XMLElement* tinyxml2::XMLNode::PreviousSiblingElement(const char*) const’:
tinyxml2.cpp:1075:86: error: cannot dynamic_cast ‘node’ (of type ‘const class tinyxml2::XMLNode*’) to type ‘class tinyxml2::XMLComment*’ (conversion casts away constness)
 1075 |     for( const XMLNode* node = _prev; /*PCI*/dynamic_cast<tinyxml2::XMLComment*>(node); node = node->_prev ) {
      |                                                                                      ^
diff: tinyxml2.o: No such file or directory
